src/test/deca/codegen/valid/provided/UnaryMinus.deca
{
int a = 2;
float b = 3.0;
print(-a);
print(-b);
}
